clusters/cluster/homeautomation/appdaemon/appdaemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdaemon
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appdaemon
  #strategy:
  #  type: Recreate
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      containers:
      - name: appdaemon
        image: acockburn/appdaemon:4.4.2 # {"$imagepolicy": "flux-system:appdaemon:tag"}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: appdaemon-config
          mountPath: /conf
      volumes:
      - name: appdaemon-config
        persistentVolumeClaim:
          claimName: appdaemon-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: appdaemon
  namespace: default
  labels:
    app: appdaemon
spec:
  selector:
    app: appdaemon
  ports:
  - name: appdaemon
    port: 5050
    targetPort: 5050
  type: ClusterIP
